--- a/source/index.html
+++ b/source/index.html
@@ -55,9 +55,12 @@
           </div>
           <div class="right-column">
             <picture>
-              <source media="(max-width: 767px)" srcset="img/presentation-mobile.jpg">
-              <source media="(max-width: 1365px)" srcset="img/presentation-tablet.jpg">
-              <img class="presentation__image" src="img/presentation-desktop.jpg" alt="Фото пингвинов" width="560" height="301">
+              <source type="image/webp" media="(max-width: 767px)" srcset="img/presentation-mobile.webp 1x, img/presentation-mobile@2x.webp 2x">
+              <source type="image/webp" media="(max-width: 1365px)" srcset="img/img/presentation-tablet.webp 1x, img/presentation-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/presentation-desktop.webp 1x, img/presentation-desktop@2x.webp 2x">
+              <source media="(max-width: 767px)" srcset="img/presentation-mobile.jpg 1x, img/presentation-mobile@2x.jpg 2x">
+              <source media="(max-width: 1365px)" srcset="img/presentation-tablet.jpg 1x, img/presentation-tablet@2x.jpg 2x">
+              <img class="presentation__image" src="img/presentation-desktop.jpg" srcset="img/presentation-desktop@2x.jpg 2x" alt="Фото пингвинов" width="560" height="301">
             </picture>
           </div>
         </div>
@@ -81,7 +84,7 @@
             <li class="advantage__item advantage__item--zodiac">
               <h3 class="advantage__item-title">Экскурсионные туры&nbsp;на&nbsp;Zodiac</h3>
               <p class="advantage__item-text">Экскурсионные туры к берегам Антарктиды совершаются на&nbsp;оборудованных лодках
-                типа&nbsp;Zodiac&nbsp;в&nbsp;сопровождении опытных экскурсоводов.
+                типа&nbsp;Zodiac в&nbsp;сопровождении опытных экскурсоводов.
               </p>
             </li>
           </ul>
@@ -94,9 +97,12 @@
             <li class="uncoming-cruises__item">
               <div class="uncoming-cruises__item-wrapper">
                 <picture>
-                  <source media="(max-width: 767px)" srcset="img/astoria-mobile.jpg">
-                  <source media="(max-width: 1365px)" srcset="img/astoria-tablet.jpg">
-                  <img class="uncoming-cruises__item-image" src="img/astoria-desktop.jpg" alt="Астория" width="260" height="386">
+                  <source type="image/webp" media="(max-width: 767px)" srcset="img/astoria-mobile.webp 1x, img/astoria-mobile@2x.webp 2x">
+                  <source type="image/webp" media="(max-width: 1365px)" srcset="img/img/astoria-tablet.webp 1x, img/astoria-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/astoria-desktop.webp 1x, img/astoria-desktop@2x.webp 2x">
+                  <source media="(max-width: 767px)" srcset="img/astoria-mobile.jpg 1x, img/astoria-mobile@2x.jpg 2x">
+                  <source media="(max-width: 1365px)" srcset="img/astoria-tablet.jpg 1x, img/astoria-tablet@2x.jpg 2x">
+                  <img class="uncoming-cruises__item-image" src="img/astoria-desktop.jpg" srcset="img/astoria-desktop@2x.jpg 2x" alt="Астория" width="260" height="386">
                 </picture>
                 <p class="uncoming-cruises__item-caption">Круиз "Астория"</p>
                 <div class="uncoming-cruises__item-description">
@@ -116,9 +122,12 @@
             <li class="uncoming-cruises__item">
               <div class="uncoming-cruises__item-wrapper">
                 <picture>
-                  <source media="(max-width: 767px)" srcset="img/astoria-mobile.jpg">
-                  <source media="(max-width: 1365px)" srcset="img/astoria-tablet.jpg">
-                  <img class="uncoming-cruises__item-image" src="img/astoria-desktop.jpg" alt="Элайн" width="260" height="386">
+                  <source type="image/webp" media="(max-width: 767px)" srcset="img/astoria-mobile.webp 1x, img/astoria-mobile@2x.webp 2x">
+                  <source type="image/webp" media="(max-width: 1365px)" srcset="img/img/astoria-tablet.webp 1x, img/astoria-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/astoria-desktop.webp 1x, img/astoria-desktop@2x.webp 2x">
+                  <source media="(max-width: 767px)" srcset="img/astoria-mobile.jpg 1x, img/astoria-mobile@2x.jpg 2x">
+                  <source media="(max-width: 1365px)" srcset="img/astoria-tablet.jpg 1x, img/astoria-tablet@2x.jpg 2x">
+                  <img class="uncoming-cruises__item-image" src="img/astoria-desktop.jpg" srcset="img/astoria-desktop@2x.jpg 2x" alt="Астория" width="260" height="386">
                 </picture>
                 <p class="uncoming-cruises__item-caption">Круиз “Элайн”</p>
                 <div class="uncoming-cruises__item-description">
@@ -138,9 +147,12 @@
             <li class="uncoming-cruises__item">
               <div class="uncoming-cruises__item-wrapper">
                 <picture>
-                  <source media="(max-width: 767px)" srcset="img/atlantis-mobile.jpg">
-                  <source media="(max-width: 1365px)" srcset="img/atlantis-tablet.jpg">
-                  <img class="uncoming-cruises__item-image" src="img/atlantis-desktop.jpg" alt="Атлантис" width="260" height="386">
+                  <source type="image/webp" media="(max-width: 767px)" srcset="img/atlantis-mobile.webp 1x, img/atlantis-mobile@2x.webp 2x">
+                  <source type="image/webp" media="(max-width: 1365px)" srcset="img/img/atlantis-tablet.webp 1x, img/atlantis-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/atlantis-desktop.webp 1x, img/atlantis-desktop@2x.webp 2x">
+                  <source media="(max-width: 767px)" srcset="img/atlantis-mobile.jpg 1x, img/atlantis-mobile@2x.jpg 2x">
+                  <source media="(max-width: 1365px)" srcset="img/atlantis-tablet.jpg 1x, img/atlantis-tablet@2x.jpg 2x">
+                  <img class="uncoming-cruises__item-image" src="img/atlantis-desktop.jpg" srcset="img/atlantis-desktop@2x.jpg 2x" alt="Астория" width="260" height="386">
                 </picture>
                 <p class="uncoming-cruises__item-caption">Круиз "Атлантис</p>
                 <div class="uncoming-cruises__item-description">
@@ -160,9 +172,12 @@
             <li class="uncoming-cruises__item">
               <div class="uncoming-cruises__item-wrapper">
                 <picture>
-                  <source media="(max-width: 767px)" srcset="img/odysseus-mobile.jpg">
-                  <source media="(max-width: 1365px)" srcset="img/odysseus-tablet.jpg">
-                  <img class="uncoming-cruises__item-image" src="img/odysseus-desktop.jpg" alt="Одиссей" width="260" height="386">
+                  <source type="image/webp" media="(max-width: 767px)" srcset="img/odysseus-mobile.webp 1x, img/odysseus-mobile@2x.webp 2x">
+                  <source type="image/webp" media="(max-width: 1365px)" srcset="img/img/odysseus-tablet.webp 1x, img/odysseus-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/odysseus-desktop.webp 1x, img/odysseus-desktop@2x.webp 2x">
+                  <source media="(max-width: 767px)" srcset="img/odysseus-mobile.jpg 1x, img/odysseus-mobile@2x.jpg 2x">
+                  <source media="(max-width: 1365px)" srcset="img/odysseus-tablet.jpg 1x, img/odysseus-tablet@2x.jpg 2x">
+                  <img class="uncoming-cruises__item-image" src="img/odysseus-desktop.jpg" srcset="img/odysseus-desktop@2x.jpg 2x" alt="Астория" width="260" height="386">
                 </picture>
                 <p class="uncoming-cruises__item-caption">Круиз "Одиссей"</p>
                 <div class="uncoming-cruises__item-description">
@@ -182,9 +197,12 @@
             <li class="uncoming-cruises__item">
               <div class="uncoming-cruises__item-wrapper">
                 <picture>
-                  <source media="(max-width: 767px)" srcset="img/olympia-mobile.jpg">
-                  <source media="(max-width: 1365px)" srcset="img/olympia-tablet.jpg">
-                  <img class="uncoming-cruises__item-image" src="img/olympia-desktop.jpg" alt="Олимпия" width="260" height="386">
+                  <source type="image/webp" media="(max-width: 767px)" srcset="img/olympia-mobile.webp 1x, img/olympia-mobile@2x.webp 2x">
+                  <source type="image/webp" media="(max-width: 1365px)" srcset="img/img/olympia-tablet.webp 1x, img/olympia-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/olympia-desktop.webp 1x, img/olympia-desktop@2x.webp 2x">
+                  <source media="(max-width: 767px)" srcset="img/olympia-mobile.jpg 1x, img/olympia-mobile@2x.jpg 2x">
+                  <source media="(max-width: 1365px)" srcset="img/olympia-tablet.jpg 1x, img/olympia-tablet@2x.jpg 2x">
+                  <img class="uncoming-cruises__item-image" src="img/olympia-desktop.jpg" srcset="img/olympia-desktop@2x.jpg 2x" alt="Астория" width="260" height="386">
                 </picture>
                 <p class="uncoming-cruises__item-caption">Круиз "Олимпия"</p>
                 <div class="uncoming-cruises__item-description">
@@ -204,9 +222,12 @@
             <li class="uncoming-cruises__item">
               <div class="uncoming-cruises__item-wrapper">
                 <picture>
-                  <source media="(max-width: 767px)" srcset="img/aurora-mobile.jpg">
-                  <source media="(max-width: 1365px)" srcset="img/aurora-tablet.jpg">
-                  <img class="uncoming-cruises__item-image" src="img/aurora-desktop.jpg" alt="Аврора" width="260" height="386">
+                  <source type="image/webp" media="(max-width: 767px)" srcset="img/aurora-mobile.webp 1x, img/aurora-mobile@2x.webp 2x">
+                  <source type="image/webp" media="(max-width: 1365px)" srcset="img/img/aurora-tablet.webp 1x, img/aurora-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/aurora-desktop.webp 1x, img/aurora-desktop@2x.webp 2x">
+                  <source media="(max-width: 767px)" srcset="img/aurora-mobile.jpg 1x, img/aurora-mobile@2x.jpg 2x">
+                  <source media="(max-width: 1365px)" srcset="img/aurora-tablet.jpg 1x, img/aurora-tablet@2x.jpg 2x">
+                  <img class="uncoming-cruises__item-image" src="img/aurora-desktop.jpg" srcset="img/aurora-desktop@2x.jpg 2x" alt="Астория" width="260" height="386">
                 </picture>
                 <p class="uncoming-cruises__item-caption">Круиз "Аврора"</p>
                 <div class="uncoming-cruises__item-description">
@@ -226,9 +247,12 @@
             <li class="uncoming-cruises__item">
               <div class="uncoming-cruises__item-wrapper">
                 <picture>
-                  <source media="(max-width: 767px)" srcset="img/leonor-mobile.jpg">
-                  <source media="(max-width: 1365px)" srcset="img/leonor-tablet.jpg">
-                  <img class="uncoming-cruises__item-image" src="img/leonor-desktop.jpg" alt="Леонор" width="260" height="386">
+                  <source type="image/webp" media="(max-width: 767px)" srcset="img/leonor-mobile.webp 1x, img/leonor-mobile@2x.webp 2x">
+                  <source type="image/webp" media="(max-width: 1365px)" srcset="img/img/leonor-tablet.webp 1x, img/leonor-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/leonor-desktop.webp 1x, img/leonor-desktop@2x.webp 2x">
+                  <source media="(max-width: 767px)" srcset="img/leonor-mobile.jpg 1x, img/leonor-mobile@2x.jpg 2x">
+                  <source media="(max-width: 1365px)" srcset="img/leonor-tablet.jpg 1x, img/leonor-tablet@2x.jpg 2x">
+                  <img class="uncoming-cruises__item-image" src="img/leonor-desktop.jpg" srcset="img/leonor-desktop@2x.jpg 2x" alt="Астория" width="260" height="386">
                 </picture>
                 <p class="uncoming-cruises__item-caption">Круиз "Леонор"</p>
                 <div class="uncoming-cruises__item-description">
@@ -248,9 +272,12 @@
             <li class="uncoming-cruises__item">
               <div class="uncoming-cruises__item-wrapper">
                 <picture>
-                  <source media="(max-width: 767px)" srcset="img/minion-1-mobile.jpg">
-                  <source media="(max-width: 1365px)" srcset="img/minion-1-tablet.jpg">
-                  <img class="uncoming-cruises__item-image" src="img/minion-1-desktop.jpg" alt="Минион - 1" width="260" height="386">
+                  <source type="image/webp" media="(max-width: 767px)" srcset="img/minion-1-mobile.webp 1x, img/minion-1-mobile@2x.webp 2x">
+                  <source type="image/webp" media="(max-width: 1365px)" srcset="img/img/minion-1-tablet.webp 1x, img/minion-1-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/minion-1-desktop.webp 1x, img/minion-1-desktop@2x.webp 2x">
+                  <source media="(max-width: 767px)" srcset="img/minion-1-mobile.jpg 1x, img/minion-1-mobile@2x.jpg 2x">
+                  <source media="(max-width: 1365px)" srcset="img/minion-1-tablet.jpg 1x, img/minion-1-tablet@2x.jpg 2x">
+                  <img class="uncoming-cruises__item-image" src="img/minion-1-desktop.jpg" srcset="img/minion-1-desktop@2x.jpg 2x" alt="Астория" width="260" height="386">
                 </picture>
                 <p class="uncoming-cruises__item-caption">Круиз "Минион - 1"</p>
                 <div class="uncoming-cruises__item-description">
