--- a/source/index.html
+++ b/source/index.html
@@ -334,7 +334,7 @@
       </section>
     </main>
     <footer class="page-footer">
-      <div class="background-image-container background-image-container--footer">
+      <div class="page-footer__background-image-container background-image-container background-image-container--footer">
         <div class="container page-footer__wrapper">
           <div class="page-footer__logo-wrapper">
             <a class="page-footer__logo">
